# autoresearch

./: README.md  prepare.py  program.md  pyproject.toml  train.py
